fixed moblie layout bug

--- a/style.css
+++ b/style.css
@@ -10,7 +10,9 @@ body {
   gap: 16px;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
+
+  width: 100%;
+  height: 100%;
   background-color: hsl(30, 38%, 92%);
   color: hsl(228, 12%, 48%);
 }
@@ -19,6 +21,7 @@ body {
 
   width: 700px;
   border-radius: 16px;
+  margin: 1rem;
 }
 img {
   display: block;
@@ -104,7 +107,8 @@ img {
 @media only screen and (max-width: 768px) {
   .product_component {
     flex-wrap: wrap;
-    margin: 1rem;
+    width: 100%;
+    padding: 1rem;
   }
   .product_image {
     display: none;
@@ -120,6 +124,7 @@ img {
     border-bottom-left-radius: 0;
   }
   .product_content {
+    width: 100%;
     padding: 1rem;
     border-top-right-radius: 0;
 
